# fiberpy

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  setup.py  tasks.py  test_requirements.txt
.github/workflows/: python-package.yml  pythonpackage.yml
docs/: api.rst  conf.py  index.md  index.rst  requirements.txt
docs/notebooks/: mechanics.ipynb  orientation.ipynb
examples/: mechanics.ipynb  orientation.ipynb
fiberpy/: __about__.py  __init__.py  closure.py  interface.py  mechanics.py  orientation.py  tensor.py
src/fiberpy/: __about__.py  closure.py  mechanics.py  orientation.py  tensor.py
test/: test_closure.py  test_mechanics.py  test_orientation.py  test_tensor.py
