[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiberpy"
version = "0.2.3"
description = "Computional methods for fiber-reinforced composites"
readme = "README.md"
authors = [
    { name = "Tianyi Li", email = "tianyikillua@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
dependencies = ["numpy", "scipy", "meshio", "mpmath"]

[project.urls]
"Homepage" = "https://github.com/tianyikillua/fiberpy"

[project.optional-dependencies]
dev = ["pytest", "matplotlib"]
