[metadata]
name = fiberpy
version = 1.0.0
author = Tianyi Li
author_email = tianyikillua@gmail.com
description = Computional methods for fiber-reinforced composites
url = https://github.com/tianyikillua/fiberpy
long_description = file: README.md
long_description_content_type = text/markdown
# See <https://pypi.org/classifiers/> for all classifiers.
classifiers =
    License :: OSI Approved :: MIT License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
packages = find:
install_requires =
    importlib_metadata;python_version<"3.8"
    numpy
    scipy

python_requires = >=3.7

[options.packages.find]
where=src
